--- a/archetype-gallery.html
+++ b/archetype-gallery.html
@@ -9,12 +9,11 @@
     body {
       margin: 0;
       font-family: 'Montserrat', sans-serif;
-      background-color: black;
     }
 
     .logo {
       display: block;
-      margin: 0 auto 20px;
+      margin: 20px auto 0;
       width: 200px;
     }
 
@@ -28,7 +27,7 @@
       font-weight: 700;
       color: white;
       text-shadow: 0 0 10px #72c7ff;
-      margin-bottom: 20px;
+      margin: 10px 0 30px;
     }
 
     .find-type-btn {
@@ -99,7 +98,7 @@
 
     .image-pair {
       display: flex;
-      height: 260px;
+      height: 240px;
       position: relative;
     }
 
@@ -143,8 +142,8 @@
 
 <!-- BLUE ROOM -->
 <div class="border-wrapper-blue blue-room">
+  <img src="images/golden-le-libido-logo.png" alt="Le Libido Logo" class="logo" />
   <div class="container">
-    <img src="images/logo.png" alt="Le Libido Logo" class="logo" />
     <div class="page-title">
       <h1>Sexual Profiles</h1>
     </div>
@@ -152,8 +151,6 @@
       <a href="index.html">Find Your Type</a>
     </div>
 
-    <!-- Blue Room Archetypes -->
-    <!-- Repeat this block for each archetype -->
     <div class="archetype-card">
       <div class="image-container">
         <div class="image-pair">
